--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@base-ui-components/react": "^1.0.0-rc.0",
     "@hugeicons/core-free-icons": "^2.0.0",
     "@hugeicons/react": "^1.1.1",
+    "@tanstack/react-form": "^1.27.4",
     "clsx": "^2.1.1",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
